--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,20 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- 
+ *= require_tree .
  *= require_self
  */
+
+//  CSS reset
+@import "base/reset";
+
+// core
+@import "base/colors";
+@import "base/fonts";
+@import "base/layout";
+
+// grid
+@import "base/grid";
+
+// components
+@import "components/*";
