styling the header still in progress

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MyPin</title>
+    <title>myPin</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
@@ -14,6 +14,7 @@
     <% end %>
     <script type="text/javascript">
       window.logoURL = "<%= image_url('logo.png') %>";
+      window.spriteURL = "<%= image_url('sprite.png') %>";
     </script>
   </head>
 
