--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  // border: 1px solid yellow;
   font-size: 16px;
   font-weight: 400;
   background: #eee;
@@ -9,10 +10,14 @@ body {
 
 .header {
   background:white;
+  border: 1px solid blue;
   color: $darkgrey;
   border-bottom: 1px solid #ccc;
 }
-
+.header h1{
+  font-size: 20px;
+  border: 1px solid blue;
+}
 .header a {
   display: block;
   padding: 10px 20px;
@@ -21,14 +26,16 @@ body {
 .header-nav {
   display: flex;
   justify-content: space-between;
+  border: 1px solid green;
   margin: 0 auto;
   width: 900px;
-  // border-left: 1px solid #ccc;
-  // border-right: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
 }
 
 .header-logo {
   display: flex;
+  border: 1px solid red;
   border-left: 1px solid #ccc;
   font-weight: 700;
 }
@@ -53,3 +60,29 @@ body {
 .header-list > li:hover {
   background: $lightgrey;
 }
+
+.header-greeting{
+  display: block;
+  text-align: center;
+  // border: 1px solid red;
+
+}
+.header-name{
+  display: block;
+  font-size: 36px;
+    margin-block-start: 1.33em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+
+}
+.header-greeting-btn{
+  display: flex;
+  justify-content: space-between;
+  font-size: 16;
+  // border: 1px solid red;
+
+}
+
+
