--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -21,3 +21,10 @@
   min-height: 200px;
   padding: 20px;
 }
+
+button{
+    border: 1px solid grey;
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
