--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -3,58 +3,81 @@
 body {
   font-family: "Roboto", sans-serif;
   // border: 1px solid yellow;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 400;
   background: #eee;
 }
 
 .header {
   background:white;
-  border: 1px solid blue;
+  // border: 1px solid blue;
   color: $darkgrey;
   border-bottom: 1px solid #ccc;
 }
 .header h1{
   font-size: 20px;
-  border: 1px solid blue;
+  // border: 1px solid blue;
 }
 .header a {
   display: block;
-  padding: 10px 20px;
+  padding: 7px;
 }
 
 .header-nav {
+  padding-top: 20px;
   display: flex;
   justify-content: space-between;
-  border: 1px solid green;
+  // border: 1px solid green;
   margin: 0 auto;
-  width: 900px;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
+  width: auto;
+  // border-left: 1px solid #ccc;
+  // border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
 }
 
 .header-logo {
   display: flex;
-  border: 1px solid red;
-  border-left: 1px solid #ccc;
+  // border: 1px solid red;
+  // border-left: 1px solid #ccc;
   font-weight: 700;
+  padding: 7px;
 }
 
 .header-logo img {
-  height: 28px;
-  width: 28px;
+  height: 36px;
+  width: 36px;
 }
 
 .header-logo:hover {
   background:$lightgrey;
 }
+.header-app{
+  display: flex;
+  border-right: 1px solid #ccc;
+  h1{
+    // font-size: 20;
+    font-weight: bolder;
+    padding-top: 20px;
+    padding-right: 10px;
+  }
+}
 
 .header-list {
   display: flex;
 }
+.header-nav-search{
+  padding-left: 10px;
+  width: 30%;
+  border-right: 1px solid #ccc;
+}
+.search-input{
+  padding: 10px;
+   border-radius: 7px;
+  border: 1px solid grey;
+}
 
 .header-list > li {
-  border-left: 1px solid #ccc;
+  // border-left: 1px solid #ccc;
 }
 
 .header-list > li:hover {
@@ -62,13 +85,14 @@ body {
 }
 
 .header-greeting{
-  display: block;
+  // display: block;
+  padding-top: 30px;
   text-align: center;
   // border: 1px solid red;
 
 }
 .header-name{
-  display: block;
+  // display: block;
   font-size: 36px;
     margin-block-start: 1.33em;
     margin-block-end: 1.33em;
@@ -78,10 +102,13 @@ body {
 
 }
 .header-greeting-btn{
-  display: flex;
+  float: right;
   justify-content: space-between;
   font-size: 16;
-  // border: 1px solid red;
+  border: 1px solid grey;
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
 
 }
 
