--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,28 @@
     <script type="text/javascript">
       window.logoURL = "<%= image_url('logo.png') %>";
       window.spriteURL = "<%= image_url('sprite.png') %>";
+      window.backgroundURL = "<%= image_url('background1.png') %>";
+      window.pin1URL = "<%= image_url('pin1.jpg') %>";
+      window.pin2URL = "<%= image_url('pin2.jpg') %>";
+      window.pin3URL = "<%= image_url('pin3.jpg') %>";
+      window.pin4URL = "<%= image_url('pin4.jpg') %>";
+      window.pin5URL = "<%= image_url('pin5.jpg') %>";
+      window.pin6URL = "<%= image_url('pin6.jpg') %>";
+      window.pin7URL = "<%= image_url('pin7.jpg') %>";
+      window.pin8URL = "<%= image_url('pin8.jpg') %>";
+      window.pin9URL = "<%= image_url('pin9.jpg') %>";
+      window.pin10URL = "<%= image_url('pin10.jpg') %>";
+      window.pin11URL = "<%= image_url('pin11.jpg') %>";
+      window.pin12URL = "<%= image_url('pin12.jpg') %>";
+      window.pin13URL = "<%= image_url('pin13.jpg') %>";
+      window.pin14URL = "<%= image_url('pin14.jpg') %>";
+      window.pin15URL = "<%= image_url('pin15.jpg') %>";
+      window.pin16URL = "<%= image_url('pin16.jpg') %>";
+      window.pin17URL = "<%= image_url('pin17.jpg') %>";
+      window.pin18URL = "<%= image_url('pin18.jpg') %>";
+      window.pin19URL = "<%= image_url('pin19.jpg') %>";
+      window.pin20URL = "<%= image_url('pin20.jpg') %>";
+      window.pin21URL = "<%= image_url('pin21.jpg') %>";
     </script>
   </head>
 
