--- a/app/assets/stylesheets/base/_icons.scss
+++ b/app/assets/stylesheets/base/_icons.scss
@@ -1,6 +1,6 @@
 [class*="icon-"] {
   display: inline-block;
-  background-image: url("../../images/sprite.png");
+  background-image: image_url("sprite.png");
   background-size: 25px 250px;
   background-repeat: no-repeat;
   vertical-align: bottom;
