--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -12,7 +12,8 @@
    bottom: 0;
    right: 0;
    left: 0;
-   background: rgba(0, 0, 0, 0.7);
+  //  background-image: image_url("background1.png");
+   background: rgba(0, 0, 0, 0.45);
    z-index: 10;
  }
 
@@ -24,19 +25,23 @@
 }
 
 .modal-form {
-  position: absolute;
+  position: relative;
+  text-align: center;
   top: 100px;
   left: 50%;
   margin-left: -220px;
   width: 360px;
-  padding: 20px;
-  background: #fff;
+  min-height: 400px;
+  // padding: 20px 10px;
+  background: rgb(255, 255, 255);
   z-index: 3;
-  border-radius: 5px;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 2px 10px;
   border: 1px solid grey;
 }
 
   .modal-button{
+    
     position: relative;
     top: 50px;
     left: 10%;
