--- a/app/assets/stylesheets/base/_icons.scss
+++ b/app/assets/stylesheets/base/_icons.scss
@@ -1,56 +1,25 @@
 [class*="icon-"] {
   display: inline-block;
-  background-image: image_url("sprite.png");
-  background-size: 25px 250px;
-  background-repeat: no-repeat;
-  vertical-align: bottom;
-  overflow: hidden;
-  height: 0;
-  width: 25px;
-  padding-top: 25px;
+ vertical-align: top;
+  width: 23px;
+    color: grey;
 }
 
-[class*="icon-small-"] {
-  width: 20px;
-  padding-top: 20px;
+
+.icon-search{
+    // color: grey;
+    background-color: rgb(231, 228, 228);
+    // border-top: 1px solid grey;
+    // border-left: 1px solid grey;
+    // border-bottom: 1px solid grey;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    padding: 10px;
 }
 
-.icon-comment {
-  background-position: 0 0;
-}
-
-.icon-comment:hover {
-  background-position: 0 -25px;
-}
-
-.icon-reblog {
-  background-position: 0 -100px;
-}
-
-.icon-reblog:hover {
-  background-position: 0 -125px;
-}
-
-.icon-favorite {
-  background-position: 0 -50px;
-}
-
-.icon-favorite:hover {
-  background-position: 0 -75px;
-}
-
-.icon-small-wall {
-  background-position: 0 -225px;
-}
-
-.icon-small-about {
-  background-position: 0 -175px;
-}
-
-.icon-small-friends {
-  background-position: 0 -150px;
-}
-
-.icon-small-photos {
-  background-position: 0 -200px;
+.icon-message{
+    // color: grey;
+    font-size: 40;
+    width: 40px;
+    border-radius: 50px;
 }
