--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -3,8 +3,8 @@
 body {
   font-family: "Roboto", sans-serif;
   // border: 1px solid yellow;
-  font-size: 20px;
-  font-weight: 400;
+  font-size: 24px;
+  font-weight: bolder;
   background: #eee;
 }
 
@@ -15,21 +15,28 @@ body {
   border-bottom: 1px solid #ccc;
 }
 .header h1{
-  font-size: 20px;
+ 
+
   // border: 1px solid blue;
 }
-.header a {
+.header li {
   display: block;
   padding: 7px;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 45%;
 }
 
 .header-nav {
-  padding-top: 20px;
+  // padding-top: 20px;
   display: flex;
   justify-content: space-between;
   // border: 1px solid green;
-  margin: 0 auto;
-  width: auto;
+  // margin-top: 20px;
+  width: 100%;
+  overflow: auto;
+  // width: auto;
   // border-left: 1px solid #ccc;
   // border-right: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
@@ -40,40 +47,61 @@ body {
   // border: 1px solid red;
   // border-left: 1px solid #ccc;
   font-weight: 700;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   padding: 7px;
+  // border-radius: 50%;
+  // background-color: red;
+  // h2{
+  //   font-size: x-large;
+  //   color: white;
+  //   border-radius: 50%;
+  //   padding: 20px;
+  //   background-color: red;
+  // }
 }
 
 .header-logo img {
-  height: 36px;
-  width: 36px;
+  height: 70px;
+  width: 70px;
 }
 
 .header-logo:hover {
   background:$lightgrey;
 }
-.header-app{
+// .header-app{
+//   display: flex;
+//   border-right: 1px solid #ccc;
+//   h1{
+//     // font-size: 20;
+//     font-weight: bolder;
+//     padding-top: 20px;
+//     padding-right: 10px;
+//   }
+// }
+.header-right{
   display: flex;
-  border-right: 1px solid #ccc;
-  h1{
-    // font-size: 20;
-    font-weight: bolder;
-    padding-top: 20px;
-    padding-right: 10px;
-  }
+  align-items: center;
 }
-
 .header-list {
   display: flex;
+  align-items: center;
 }
 .header-nav-search{
+  display: flex;
+  align-items: center;
+  // margin-top: 10px;
   padding-left: 10px;
   width: 30%;
   border-right: 1px solid #ccc;
 }
 .search-input{
   padding: 10px;
-   border-radius: 7px;
-  border: 1px solid grey;
+  background-color: rgb(231, 228, 228);
+  //  border-top: 1px solid grey;
+  //   border-right: 1px solid grey;
+  //   border-bottom: 1px solid grey;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
 }
 
 .header-list > li {
@@ -81,19 +109,19 @@ body {
 }
 
 .header-list > li:hover {
-  background: $lightgrey;
+  background: rgb(231, 228, 228);
 }
 
 .header-greeting{
   // display: block;
-  padding-top: 30px;
+  padding: 30px;
   text-align: center;
   // border: 1px solid red;
 
 }
 .header-name{
   // display: block;
-  font-size: 36px;
+  font-size: 40px;
     margin-block-start: 1.33em;
     margin-block-end: 1.33em;
     margin-inline-start: 0px;
