--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -14,11 +14,11 @@ body {
   color: $darkgrey;
   border-bottom: 1px solid #ccc;
 }
-.header h1{
+// .header h1{
  
 
-  // border: 1px solid blue;
-}
+//   // border: 1px solid blue;
+// }
 .header li {
   display: block;
   padding: 7px;
