added test images for pins index

--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -28,19 +28,18 @@ button{
   padding: 10px;
   border-radius: 5px;
 }
-.masonry{
+[class*="masonry-"] {
     column-count: 4;
-  column-gap: 1em;
+    column-gap: 1em;
 }
-
-.item{
+[class*="item-"] {
     background-color: #eee;
   display: inline-block;
   margin: 0 0 1em;
   border-radius: 7px;
   width: 100%;
-}
-.item img{
-    border-radius: 15px;
-    // margin-left: 15px;
+
+  img{
+      border-radius: 15px;
+  }
 }
