removed home index top border

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -12,7 +12,7 @@ body {
   background:white;
   // border: 1px solid blue;
   color: $darkgrey;
-  border-bottom: 1px solid #ccc;
+  // border-bottom: 1px solid #ccc;
 }
 // .header h1{
  
