--- a/app/assets/stylesheets/components/login_signup.scss
+++ b/app/assets/stylesheets/components/login_signup.scss
@@ -1,19 +1,19 @@
-.masonry{
-    column-count: 4;
-  column-gap: 1em;
-}
+// .masonry{
+//     column-count: 4;
+//   column-gap: 1em;
+// }
 
-.item{
-    background-color: #eee;
-  display: inline-block;
-  margin: 0 0 1em;
-  border-radius: 7px;
-  width: 100%;
-}
-.item img{
-    border-radius: 15px;
-    // margin-left: 15px;
-}
+// .item{
+//     background-color: #eee;
+//   display: inline-block;
+//   margin: 0 0 1em;
+//   border-radius: 7px;
+//   width: 100%;
+// }
+// .item img{
+//     border-radius: 15px;
+//     // margin-left: 15px;
+// }
 
 .session-form-container {
     position: relative;
