--- a/app/assets/stylesheets/components/boardz.scss
+++ b/app/assets/stylesheets/components/boardz.scss
@@ -22,18 +22,18 @@
     padding-bottom: 4px;
     border-bottom: 1px solid gray;
 }
-@media screen and (max-width: 800px) {
-    .boardz {
-        flex-direction: column;
-    }
-    .boardz ul li:last-child {
-        margin-bottom: 0;
-    }
-    .boardz ul {
-        margin: 0;
-        padding: 0;
-    }
-}
+// @media screen and (max-width: 800px) {
+//     .boardz {
+//         flex-direction: column;
+//     }
+//     .boardz ul li:last-child {
+//         margin-bottom: 0;
+//     }
+//     .boardz ul {
+//         margin: 0;
+//         padding: 0;
+//     }
+// }
 .fitted ul {
     display: flex;
 }
