--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -119,25 +119,16 @@ body {
   // border: 1px solid red;
 
 }
-.header-name{
-  // display: block;
-  font-size: 40px;
-    margin-block-start: 1.33em;
-    margin-block-end: 1.33em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
 
-}
-.header-greeting-btn{
-  float: right;
-  justify-content: space-between;
-  font-size: 16;
-  border: 1px solid grey;
-  background-color: white;
-  padding: 10px;
-  border-radius: 5px;
+// .header-greeting-btn{
+//   float: right;
+//   justify-content: space-between;
+//   font-size: 16;
+//   border: 1px solid grey;
+//   background-color: white;
+//   padding: 10px;
+//   border-radius: 5px;
 
-}
+// }
 
 
