--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -1,5 +1,92 @@
 @import "../base/colors";
 
+.profile {
+  background:white;
+  // border: 1px solid blue;
+  color: $darkgrey;
+  // border-bottom: 1px solid #ccc;
+}
+
+.profile-greeting{
+//   display: block;
+  padding: 30px;
+  text-align: center;
+  // border: 1px solid red;
+
+}
+.greeting-list{
+    display: flex;
+  align-items: center;
+}
+
+.greeting-list li{
+//   display: flex;
+//   align-items: center;
+  padding: 7px;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 45%;
+}
+
+
+.greeting-list > li:hover {
+  background: rgb(231, 228, 228);
+}
+
+.icon-plus-dropdown {
+  position: relative;
+  display: inline-block;
+//   border: 1px solid red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  margin-top: -5px;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+//   border: 1px solid blue;
+}
+.dropdown-content li {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.icon-plus-dropdown:hover{
+    background: rgb(231, 228, 228);
+}
+.dropdown-content li:hover{
+    text-decoration: underline;
+    background: rgb(231, 228, 228);
+}
+
+.dropdown-content:hover,
+.icon-plus-dropdown:hover + .dropdown-content {
+    display: block;
+}   
+
+
+.profile-name{
+  // display: block;
+  font-size: 40px;
+    margin-block-start: 1.33em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+
+}
+.profile-following{
+    font-size: x-small;
+    color:black;
+}
+
+
+
 .interactive{
   display: flex;
   justify-content: flex-start;
@@ -53,6 +140,12 @@ body {
 
 .tab-content{
     margin: 40px;
+    display: block;
+    justify-content: center;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
 
 }
 // .tabs{
