--- a/app/assets/stylesheets/base/_icons.scss
+++ b/app/assets/stylesheets/base/_icons.scss
@@ -23,3 +23,9 @@
     width: 40px;
     border-radius: 50px;
 }
+
+.icon-edit{
+    position: relative;
+    display: inline-block;
+    background-color: white;
+}
