--- a/app/assets/stylesheets/components/pins.scss
+++ b/app/assets/stylesheets/components/pins.scss
@@ -54,12 +54,13 @@
     background-color: white;
 }
 .pin-list-submit{
-    display:block;
-    position: absolute;
-    top: 0%;
-    right: 5%;
-    margin-top: 10px;
+    display:none;
+    // position: absolute;
+    // top: 0%;
+    // right: 5%;
+    // margin-top: 10px;
     //  margin-left: 20px;
+    position: relative;
      border: 1px solid grey;
     padding: 10px;
     border-radius: 5px;
@@ -87,17 +88,20 @@
     display: block;
 }  
 
-// .pin-list-submit-dropdown {
-//     position: relative;
-//     display: block;
-//     border: 1px solid purple;
+.pin-list-submit-dropdown {
+    display:block;
+    position: absolute;
+    top: 0%;
+    right: 5%;
+    margin-top: 10px;
+    // border: 1px solid purple;
 
-// }
+}
 .pin-list-submit-dropdown-content {
     display: none;
   position: absolute;
-  top: 15%;
-  right: -5%;
+  top: 55px;
+  right: -20px;
   margin-top: -5px;
   background-color: #f1f1f1;
   min-width: 160px;
@@ -108,7 +112,6 @@
   color: black;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
 }
 
 .pin-list-submit-board:hover{
@@ -117,6 +120,6 @@
 }
 
 .pin-list-submit-dropdown-content:hover,
-.pin-list-submit-dropdown:hover + .pin-list-submit-dropdown {
+.pin-list-submit:hover + .pin-list-submit-dropdown-content {
     display: block;
 }   
