--- a/app/assets/stylesheets/components/home_index.scss
+++ b/app/assets/stylesheets/components/home_index.scss
@@ -1,5 +1,8 @@
 .home-index{
     background: white;
+    padding-top: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .item-home-index{
