added styling to board show

--- a/app/assets/stylesheets/components/board_show.scss
+++ b/app/assets/stylesheets/components/board_show.scss
@@ -1,5 +1,6 @@
 .board-show{
     background:white;
+    padding-left: 30px;
 }
 
 .board-show-header{
@@ -18,4 +19,7 @@
 .masonry-board-show-pins,
 .item-board-show-pins{
     background:white;
+}
+.icon-back-arrow{
+    padding: 7px;
 }
