--- a/app/assets/stylesheets/components/login_signup.scss
+++ b/app/assets/stylesheets/components/login_signup.scss
@@ -45,11 +45,14 @@
     align-items: center;
     text-align: center;
  }
- .session-logo{
-    //  position: relative;
-    margin-left: 90px;
-     height: 60px;
-     width: 60px;
+ .session-header .header-logo{
+   display: flex;
+   justify-content: center;
+  align-items: center;
+    // //  position: relative;
+    // margin-left: 90px;
+    //  height: 60px;
+    //  width: 60px;
  }
  .session-errors{
     color: red;
@@ -92,4 +95,22 @@
      margin-top: 20px;
      font-size: x-small;
      color:grey;
+ }
+
+ .demo-login{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16;
+  font-weight: normal;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+
+ }
+
+ .demo-login:hover{
+  background: rgb(231, 228, 228);
+  text-decoration: underline;
  }
