--- a/app/assets/stylesheets/components/home_index.scss
+++ b/app/assets/stylesheets/components/home_index.scss
@@ -5,6 +5,32 @@
     padding-right: 30px;
 }
 
+.users-index{
+    display: block;
+    font-size: 16px;
+    color: darkgrey;
+    padding: 15px;
+    
+}
+.users-index ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.users-index li{
+    align-items: center;
+    border-radius: 8px;
+    padding: 15px;
+    margin: 10px;
+    cursor: pointer;
+    // border: 1px solid darkgrey;
+}
+.users-index li:hover{
+    text-decoration: underline;
+    background: rgb(231, 228, 228);
+
+}
 .item-home-index{
     background: white;
 }
