--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -78,7 +78,7 @@ body {
 //     padding-right: 10px;
 //   }
 // }
-.header-right{
+.header-right, .header-brand{
   display: flex;
   align-items: center;
 }
@@ -92,7 +92,7 @@ body {
   // margin-top: 10px;
   padding-left: 10px;
   width: 30%;
-  border-right: 1px solid #ccc;
+  // border-right: 1px solid #ccc;
 }
 .search-input{
   padding: 10px;
@@ -103,6 +103,13 @@ body {
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
 }
+// @media (min-width: 300px){
+//   /* styles for this breakpoint go here */
+//   .search-input{
+//     display: none;
+//   }
+
+// }
 
 .header-list > li {
   // border-left: 1px solid #ccc;
@@ -119,6 +126,33 @@ body {
   // border: 1px solid red;
 
 }
+
+.profile-dropdown {
+  position: relative;
+  display: inline-block;
+//   border: 1px solid red;
+}
+.profile-dropdown-content {
+  display: none;
+  position: absolute;
+  top: 70px;
+  margin-top: -5px;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+//   border: 1px solid blue;
+}
+.profile-dropdown-content li {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.profile-dropdown-content:hover,
+.profile-dropdown:hover + .profile-dropdown-content {
+    display: block;
+} 
 
 // .header-greeting-btn{
 //   float: right;
