--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -136,6 +136,7 @@ body {
   display: none;
   position: absolute;
   top: 70px;
+  right: 0px;
   margin-top: -5px;
   background-color: #f1f1f1;
   min-width: 160px;
@@ -148,6 +149,10 @@ body {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+}
+.profile-dropdown-content li:hover{
+    text-decoration: underline;
+    background: rgb(231, 228, 228);
 }
 .profile-dropdown-content:hover,
 .profile-dropdown:hover + .profile-dropdown-content {
